internal/functions/fixtures/konvert/ingress-nginx-4.0.13/upstream/configmap-ingress-nginx-controller.yaml
# Source: ingress-nginx/templates/controller-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.0.13
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: "1.1.0"
    app.kubernetes.io/managed-by: konvert
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  annotations:
    konvert.kumorilabs.io/generated-by: 'konvert'
    konvert.kumorilabs.io/chart: 'https://kubernetes.github.io/ingress-nginx,ingress-nginx'
data:
  allow-snippet-annotations: "true"
