internal/functions/fixtures/konvert/ingress-nginx-4.0.13/upstream/service-ingress-nginx-controller-admission.yaml
# Source: ingress-nginx/templates/controller-service-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.0.13
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: "1.1.0"
    app.kubernetes.io/managed-by: konvert
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller-admission
  annotations:
    konvert.kumorilabs.io/generated-by: 'konvert'
    konvert.kumorilabs.io/chart: 'https://kubernetes.github.io/ingress-nginx,ingress-nginx'
spec:
  type: ClusterIP
  ports:
  - name: https-webhook
    port: 443
    targetPort: webhook
    appProtocol: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
